--- a/goApplovUnit/build.gradle
+++ b/goApplovUnit/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    /*id 'maven-publish'*/
+    id 'maven-publish'
 }
 
 android {
@@ -51,17 +51,15 @@ dependencies {
 
 }
 
-/*
 afterEvaluate {
     publishing {
         publications {
             release(MavenPublication) {
                 from components.release
-                groupId = 'com.github.commonvideo'
-                artifactId = 'afgi'
-//                version = 'release-cally-1.0.1'
-                version = 'release-mirrorcast-1.0.1'
+                groupId = 'com.github.akcommon'
+                artifactId = 'goapplovunit'
+                version = 'beta-0.0.1'
             }
         }
     }
-}*/
+}
